# mpcxparser

./: .clang-format  CMakeLists.txt  README.md
.github/: clang-format-matcher.json  release-drafter.yml
.github/workflows/: build.yml  dummy.yml  release-close.yml  release-open.yml
example/mpcxparser/: CMakeLists.txt  main.cpp
example/mpcxparser_header_only/: CMakeLists.txt  CMakePresets.json
include/mpcxparser/: exception.hpp  mpcxparser.h  mugenpcx.hpp
include/mpcxparser/impl/: mpcxparser.cpp  mugenpcx.cpp
test/: parse.cpp  write.cpp
test/assets/bad/: kfm16.pcx  missing_bytesperline.pcx  missing_data.pcx  missing_pallete.pcx  missing_palletemode.pcx  missing_screensize.pcx  test32bits.pcx  zero.pcx
test/assets/good/: kfm.pcx  test24bits.pcx  test256.pcx  testEGA16.pcx
